自动调用大模型的方式，包含SDK，HTTP，spring AI，langchain4j